--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@mediapipe/tasks-vision": "^0.10.22-rc.20250304",
     "next": "15.5.4",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "tone": "^15.1.22"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
